Closed Bug 773784 Opened 14 years ago Closed 14 years ago

Launching an app with no version of FF installed - Update error messages to say FF 16

Categories

(Firefox Graveyard :: Web Apps, defect, P1)

defect

Tracking

(firefox16 verified)

VERIFIED FIXED
Firefox 17
Tracking Status
firefox16 --- verified

People

(Reporter: jsmith, Assigned: myk)

Details

(Whiteboard: [qa!])

Attachments

(1 file)

With the backout of FF 15 web apps support, we'll need to update the error messages for when an app fails to launch to say FF 16 instead of FF 15.
Priority: -- → P1
Assignee: nobody → myk
Status: NEW → ASSIGNED
Attachment #642101 - Flags: review?(felipc)
Attachment #642101 - Flags: review?(felipc) → review+
Keywords: checkin-needed
Whiteboard: [qa+]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 17
Verified on Nightly. Please nominate for Aurora uplift.
Status: RESOLVED → VERIFIED
Whiteboard: [qa+] → [qa!]
Comment on attachment 642101 [details] [diff] [review] patch v1: the obvious, trivial fix [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 772638 User impact if declined: When users of Firefox 15 install any test build of Firefox 16 (f.e. Aurora or Beta), install some webapps, and then uninstall that test build of Firefox 16, their apps will complain that they need Firefox 15+ to run the apps, which will confuse them, since they already have Firefox 15. Testing completed (on m-c, etc.): This landed in Central on Friday and was verified by QA on Sunday. Risk to taking this patch (and alternatives if risky): This is a low-risk patch, and there are no alternatives. String or UUID changes made by this patch: None.
Attachment #642101 - Flags: approval-mozilla-aurora?
Attachment #642101 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [qa!] → [qa+]
Whiteboard: [qa+] → [qa!]
Product: Firefox → Firefox Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: