Bug 773784 - Update error messages to say FF 16 when launching an app with no version of FF installed. r=felipc